--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -659,6 +659,9 @@
 
     <!-- LineageOS additions -->
 
+    <!-- Used for long press power torch feature - automatic turn off on timeout -->
+    <protected-broadcast android:name="com.android.server.policy.PhoneWindowManager.ACTION_TORCH_OFF" />
+
     <!-- Used to launch a common app (FlipFlap) for devices with flip cover. -->
     <protected-broadcast android:name="lineageos.intent.action.LID_STATE_CHANGED" />
 
