--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -512,7 +512,7 @@
     <protected-broadcast android:name="android.telecom.action.CURRENT_TTY_MODE_CHANGED" />
     <protected-broadcast android:name="com.android.server.retaildemo.ACTION_RESET_DEMO" />
 
-    <protected-broadcast android:name="cyanogenmod.intent.action.ACTION_LID_STATE_CHANGED" />
+    <protected-broadcast android:name="cyanogenmod.intent.action.LID_STATE_CHANGED" />
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
