[DO NOT SUBMIT] OMS Squash
Easier for repopicking this way

===============================

OMS7-N: Support tagging resources as OK to overlay [1/11]

This will allow applications to have a resource xml defining what
resources that are safe to overlay by third party overlay packages.
The format of the tag is <overlay type="..." name="..."/> and it will
result in the FLAG_OVELAY being set on the resource entry.

An overlay package with resources that are not tagged as OK
to overlay by the target application, is considered to be a dangerous
overlay.

Idmaps generated for dangerous overlays will be flagged as dangerous in
the idmap header. It is still possible to use both idmap and overlays that
are dangerous, but it might not be advisable.

The intention is to allow dangerous overlays to be used if
they are pre-installed or if the signature of the overlay package
matches the signature of the target package.

Change-Id: I08d11de845c1679017798ea1636ef4c36f820d8e

OMS7-N: Introduce the OverlayManagerService [2/11]

Add a new system service to manage Runtime Resource Overlays. This will
offload the PackageManagerService and allow administration of overlay
packages while affected packages continue to execute.

Overlays can be enabled or disabled during runtime. To the running
application the change is invisible. Technically, the overlay is added
or removed from the running application similarly to how multi-window
affects resources.

Before an overlay can be enabled it has to be approved. This happens
during package installation or upgrade and if an error occurs, the
overlay is marked as not approved.

The system performs the following security checks, in
the order listed, to determine if an overlay can be approved:

  1. Is the overlay package pre-installed? If yes, OK to use.

  2. Are the target and overlay packages signed with the same
     certificate? If yes, OK to use.

  3. Is the overlay dangerous? If no, OK to use.

An overlay is said to be dangerous if it modif

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -84,6 +84,10 @@
     <protected-broadcast android:name="android.intent.action.USER_INITIALIZE" />
     <protected-broadcast android:name="android.intent.action.INTENT_FILTER_NEEDS_VERIFICATION" />
     <protected-broadcast android:name="android.intent.action.SU_SESSION_CHANGED" />
+    <protected-broadcast android:name="android.intent.action.OVERLAY_ADDED" />
+    <protected-broadcast android:name="android.intent.action.OVERLAY_CHANGED" />
+    <protected-broadcast android:name="android.intent.action.OVERLAY_REMOVED" />
+    <protected-broadcast android:name="android.intent.action.OVERLAY_PRIORITY_CHANGED" />
 
     <protected-broadcast android:name="Auth_password_wrong" />
     <protected-broadcast android:name="android.os.action.POWER_SAVE_MODE_CHANGED" />
@@ -525,6 +529,8 @@
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
     <eat-comment />
+
+    <protected-broadcast android:name="projekt.substratum.APP_CRASHED" />
 
     <!-- ====================================================================== -->
     <!-- Permissions for accessing user's contacts including personal profile   -->
@@ -3168,6 +3174,13 @@
          @hide  <p>Not for use by third-party applications.</p> -->
     <permission android:name="android.permission.SUBSTITUTE_NOTIFICATION_APP_NAME"
                 android:protectionLevel="signature|privileged" />
+
+    <!-- Allows an application to make calls to OverlayManagerService.
+         @hide -->
+    <permission android:name="oms.permission.MODIFY_OVERLAYS"
+        android:label="@string/permlab_modifyOverlays"
+        android:description="@string/permdesc_modifyOverlays"
+        android:protectionLevel="signatureOrSystem" />
 
     <application android:process="system"
                  android:persistent="true"
